--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.9",
+    "override": "0.0.1"
   }
 }
